--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <div class="display">
+      <h1>ns calculator</h1>
       <div class="history"></div>
       <div class="result">0</div>
     </div>
