--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="display">
-      <!-- <h1>ns calculator</h1> -->
+      <div class="whitespace"></div>
       <div class="history"></div>
       <div class="result">0</div>
     </div>
